--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+npm-debug.log
+yarn-error.log
+package-lock.json
+yarn.lock
 
 # testing
 /coverage
@@ -21,3 +23,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IntelliJ
+.idea
