--- a/package.json
+++ b/package.json
@@ -2,21 +2,16 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.17",
-    "@types/node": "12.7.1",
-    "@types/react": "16.9.1",
-    "@types/react-dom": "16.8.5",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0",
-    "typescript": "3.5.3"
-  },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "coverage": "npm run test -- --coverage",
+    "eject": "react-scripts eject",
+    "lint": "tslint -c ./tslint.json ./src/**/*.ts*",
+    "start": "react-scripts start",
+    "start:dev": "ENV_MODE=DEV react-scripts start",
+    "start:prod": "ENV_MODE=PROD react-scripts start",
+    "start:test": "ENV_MODE=TEST react-scripts start",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +27,67 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/build"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    },
+    "coverageReporters": [
+      "text"
+    ],
+    "snapshotSerializers": []
+  },
+  "dependencies": {
+    "@apollo/react-hooks": "^3.0.0",
+    "@testing-library/react": "^9.1.0",
+    "@types/graphql": "^14.2.3",
+    "@types/jest": "24.0.17",
+    "@types/lodash": "^4.14.136",
+    "@types/node": "12.7.1",
+    "@types/react": "16.9.1",
+    "@types/react-dom": "16.8.5",
+    "@types/react-redux": "^7.1.1",
+    "@types/react-select": "^3.0.2",
+    "@types/react-virtualized": "^9.21.4",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/styled-components": "^4.1.18",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.4.2",
+    "lodash": "^4.17.15",
+    "react": "^16.9.0",
+    "react-apollo": "^3.0.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
+    "react-scripts": "3.1.0",
+    "react-select": "^3.0.4",
+    "react-test-renderer": "^16.9.0",
+    "react-virtualized": "^9.21.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^4.3.2",
+    "typescript": "3.5.3"
+  },
+  "devDependencies": {
+    "husky": "^3.0.3",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1"
   }
 }
