--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-virtualized": "^9.21.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "simple-icons": "^1.14.0",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
