--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/styled-components": "^4.1.18",
     "apollo-boost": "^0.4.4",
+    "aws-amplify": "^1.1.40",
+    "aws-amplify-react": "^2.4.4",
     "graphql": "^14.4.2",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
@@ -59,7 +61,8 @@
     "redux-devtools-extension": "^2.13.8",
     "simple-icons": "^1.14.0",
     "styled-components": "^4.3.2",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "husky": "^3.0.3",
